@@ -1,0 +1,5 @@
+{
+    "Marion, IL": "37.7308,-88.9277",
+    "Murray, KY": "36.6103,-88.3148",
+    "Champaign, IL": "40.1163,-88.2435"
+}
